# cybersecurity-notebook

./: README.md
chrome-password-decryption/: Cargo.toml
chrome-password-decryption/src/: main.rs
file-integrity-checker-main/: Cargo.toml  README.md
file-integrity-checker-main/src/: main.rs
file-integrity-checker-main/src/test_dir/: test.txt
